Added more videos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           alt=""
         />
       </div>
-    </div>
+      </div>
 
     <div class="main-container">
       <div class="sidebar">
@@ -285,23 +285,15 @@
           </div>
 
           <div class="vid">
-            <iframe
-              width="250"
-              height="150"
-              src="https://www.youtube.com/embed/O-eRMrKb7zY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+            <iframe width="250" height="150" src="https://www.youtube.com/embed/x7oKEZDLcD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="vidtitle">
               <img
-                src="https://yt3.ggpht.com/G95ffhepndRBNxQWOlAVlnFDhlDX8CSVnMogDAyys_X3zGVhNWlllvAKViCCRMLEjJ3k0vt2tg=s48-c-k-c0x00ffffff-no-rj"
+                src="https://yt3.ggpht.com/ytc/AKedOLT0d2sW5WqQuCGQkWeNndFN4ipOfNmHkha6bTvp=s48-c-k-c0x00ffffff-no-rj"
               />
               <p>How to Draw A Cute Mushroom House in...</p>
             </div>
             <p>Draw with Michelle</p>
-            <p>370 views • May 31, 2022</p>
+            <p>52 views • 11 hours ago</p>
           </div>
 
           <div class="vid">
@@ -343,6 +335,30 @@
             </div>
             <p>Genevieve's Design Studioe</p>
             <p>3593 views • June 11, 2022</p>
+          </div>
+
+          <div class="vid">
+            <iframe width="250" height="150" src="https://www.youtube.com/embed/zc5XgdPMWM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="vidtitle">
+              <img
+                src="https://yt3.ggpht.com/ytc/AKedOLTk6qZS18O4lHLXmt065VG4St8RmWI8Uu-HWsTACA=s68-c-k-c0x00ffffff-no-rj"
+              />
+              <p>THEY'RE GONNA TAKE AWAY MY ARTIST CARD AWAY FOR...</p>
+            </div>
+            <p>DrawingWiffWaffles</p>
+            <p>113K views • 3 days ago</p>
+          </div>
+
+          <div class="vid">
+            <iframe width="250" height="150" src="https://www.youtube.com/embed/a8lqxXhTRbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="vidtitle">
+              <img
+                src="https://yt3.ggpht.com/ytc/AKedOLSOL9XjuiWYBvIGzICrMeKw1FdwQEPY18fZ0TR1xg=s48-c-k-c0x00ffffff-no-rj"
+              />
+              <p>7 Signs Your Bird is VERY Happy and Healthy</p>
+            </div>
+            <p>Salvador Budgie</p>
+            <p>19,381 views • July 4, 2022</p>
           </div>
         </div>
       </div>
